[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/ProfileScenes/LevelSelectMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ProfileScenes/LevelSelectButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Fonts/title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/Fonts/kfn_40_o1.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/UI/Buttons/kenney/blue_button10.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Buttons/kenney/blue_button05.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Buttons/kenney/blue_button03.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "title_float"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 0, -25 ), Vector2( 0, 25 ), Vector2( 0, -25 ) ]
}

[node name="LevelSelectMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
level_button_scene = ExtResource( 2 )

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="M"]
margin_left = 730.0
margin_top = 50.0
margin_right = 1230.0
margin_bottom = 670.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 8
custom_constants/separation = 35
alignment = 1

[node name="LevelButtonsContainer" type="VBoxContainer" parent="M/VB" groups=["LevelButtonsContainer"]]
margin_top = 212.0
margin_right = 500.0
margin_bottom = 262.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectButton" parent="M/VB/LevelButtonsContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_right = 500.0

[node name="Spacer" type="Control" parent="M/VB"]
margin_top = 297.0
margin_right = 500.0
margin_bottom = 297.0

[node name="B_BackToMain" type="TextureButton" parent="M/VB"]
margin_left = 75.0
margin_top = 332.0
margin_right = 425.0
margin_bottom = 407.0
rect_min_size = Vector2( 350, 75 )
rect_pivot_offset = Vector2( 859, -170 )
size_flags_horizontal = 4
action_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="M/VB/B_BackToMain"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 5
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 4 )
text = "Back to Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="Node2D" parent="M"]
position = Vector2( 146, 327 )

[node name="TitleNode" type="Node2D" parent="M/TitleContainer"]
position = Vector2( 0, 2.06809 )
rotation = -0.174533
__meta__ = {
"_edit_lock_": true
}

[node name="TitleLabel" type="Label" parent="M/TitleContainer/TitleNode"]
custom_fonts/font = ExtResource( 3 )
text = "LEVEl SELECT"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="M/TitleContainer/TitleNode"]
autoplay = "title_float"
anims/title_float = SubResource( 1 )

[connection signal="pressed" from="M/VB/B_BackToMain" to="." method="_on_B_BackToMain_pressed"]
